@@ -1,3 +1,8 @@
+Fri Oct 12 13:36:32 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* numeric.c (flodivmod): must through the same pass if HAVE_FMOD or not.
+	  this is a bugfix of r35013.
+
 Fri Oct 12 13:28:37 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* io.c (rb_cloexec_fcntl_dupfd): get rid of compile error on windows.
